--- a/src/routes/Auth.css
+++ b/src/routes/Auth.css
@@ -1,14 +1,26 @@
 .auth_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
+  /* margin-left: auto; */
+  /* margin-right: auto; */
 }
 
 .auth_inputbox {
   display: flex;
   flex-direction: column;
+  margin-top: 64px;
+}
+
+.auth_formbox {
+  display: flex;
+  flex-direction: column;
+  margin-top: 8px;
 }
 
 .auth_anotherbox {
+  margin-top: 24px;
   display: flex;
   flex-direction: column;
 }
