--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,10 +1,6 @@
-.posts {
-  display: grid;
-  place-items: center center;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+/* 햄버거메뉴 */
+/* 네브바 */
 
-  /* row-gap: 10px; */
-  /* column-gap: 10px;  */
-  gap: 20px;
+.app_header {
+  padding-top: 58px;
 }
