:wrench: Fix: add Modal component, fix modal design
- 자주 사용되는 모달창을 컴포넌트화 시킴
- 모달 창 디자인을 수정함
- 댓글 수정 삭제 기능 추가 필요!

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;700&display=swap");
+
 * {
   margin: 0;
+  /* font-family: "Sansita Swashed", cursive; */
 }
 
 footer {
   /* 스크롤바가 생긴다 */
   /* margin: 10px; */
+  /* padding: 10px; */
 }
