:wrench: Fix: ImageModal 컴포넌트 추가, css 수정
- 포스트 모달 창 이미지 선택 시 이미지 모달 오픈
- css 수정

--- a/src/components/Modal/PostModal/PostModal.css
+++ b/src/components/Modal/PostModal/PostModal.css
@@ -123,3 +123,10 @@
 .p_lp10px {
   padding-left: 10px;
 }
+
+.icon_aspectratio {
+  position: absolute;
+  top: 95%;
+  right: 43%;
+  transform: translate(-150%, -10%);
+}
