:wrench: Feat: add comment delete feat.
- 자신이 작성한 댓글 삭제 기능 추가

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+:root {
+  --text-color: #eee5e9;
+  --background-color: #d2bcdb;
+  --accent-color: #8f148f52;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;700&display=swap");
 
 * {
