--- a/src/components/Modal/ImageModal/ImageModal.css
+++ b/src/components/Modal/ImageModal/ImageModal.css
@@ -4,17 +4,21 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
-  height: 80%;
-  /* background-color: white; */
+  width: 100%;
+  height: 100%;
+  background-color: gold;
   /* border: 2px solid #000; */
   /* box-shadow: white; */
   /* padding: 2 4 3; */
   /* border-radius: 10px; */
+  align-items: center;
 }
 
 .image_modal_image {
   flex: 1;
   object-fit: contain;
-  /* width: 100%; */
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80%;
 }
