--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,6 +15,14 @@
   justify-content: space-between;
   margin: 10px;
   align-items: center;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.navbar_logo_main {
+}
+.navbar_logo_main :hover {
+  opacity: 0.4;
 }
 
 .navbar_right_container {
@@ -25,4 +33,8 @@
 
 .navbar_right_container li {
   padding: 10px;
+}
+
+.navbar_right_container li:hover {
+  opacity: 0.4;
 }
